--- a/package.json
+++ b/package.json
@@ -3,19 +3,24 @@
   "version": "1.0.0",
   "main": "dist/webhook.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/webhook.js"
+    "local": "nodemon",
+    "dev": "NODE_ENV=development tsx src/index.ts"
   },
   "dependencies": {
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.9",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "nodemon": "^3.0.1",
+    "prettier": "^2.8.8",
+    "body-parser": "^1.20.2"
   },
   "engines": {
     "node": ">=16.0.0"
