update verify-key middleware

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webhook-app",
   "version": "1.0.0",
-  "main": "dist/webhook.js",
+  "main": "index.js",
   "scripts": {
     "local": "nodemon",
     "dev": "NODE_ENV=development tsx src/index.ts"
@@ -20,7 +20,8 @@
     "typescript": "^5.2.2",
     "nodemon": "^3.0.1",
     "prettier": "^2.8.8",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "tsx": "^3.12.7"
   },
   "engines": {
     "node": ">=16.0.0"
