--- a/package.json
+++ b/package.json
@@ -4,24 +4,28 @@
   "main": "index.js",
   "scripts": {
     "local": "nodemon",
-    "dev": "NODE_ENV=development tsx src/index.ts"
+    "dev": "NODE_ENV=development tsx src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "morgan": "^1.10.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^20.5.9",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "prettier": "^2.8.8",
-    "body-parser": "^1.20.2",
-    "tsx": "^3.12.7"
+    "ts-node": "^10.9.1",
+    "tsx": "^3.12.7",
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=16.0.0"
