--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
@@ -19,8 +21,6 @@
     "@types/morgan": "^1.9.10",
     "@types/node": "^20.5.9",
     "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
